[package]
name = "webterm-rs"
version = "0.1.3"
authors = ["gaoyan <373251686@qq.com>"]
edition = "2021"
repository = "https://github.com/poppyred/webterm-rs.git"
description = "share pty with websocket  attached to a pty"
readme = "README.md"
keywords = ["websocket","pty", "spawn", "execute", "process"]
categories = ["asynchronous", "command-line-interface"]
license = "MIT"
include = ["src/**/*","pty-process", "LICENSE", "README.md", "CHANGELOG.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pty-process ={path="./pty-process",version="0.3.0",features=["async"]}
actix-web={version="4.3.1"}
actix-test={version="0.1.1"}
actix={version="0.13.0"}
actix-files="0.6.2"
env_logger="0.10.0"
actix-web-actors={version="4.2.0"}
async-stream={version="0.3.5"}
futures-util={version="0.3.28"}
tokio={version="1.28.1", features = ["full"] }
tokio-codec={version="0.2.0-alpha.6"}
tokio-stream={version="0.1.14",features=["full"]}
tokio-util={version="0.7.8"}
regex={version="1.8.3"}
rust-embed="6.6.1"
mime_guess="2.0.4"
[features]
mutex_unlock = []

